# casf-core

./: .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODES.md  Makefile  README.md  SECURITY.md  arbol.txt  smoke_test.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: locustfile.py
contracts/: openapi.json
contracts/enums/: modes.yaml  roles.yaml  tools.yaml
contracts/schemas/: audit_event.v1.json  decision.v1.json  request.v1.json
deploy/compose/: docker-compose.yml
deploy/compose/scripts/: smoke_integration.ps1  smoke_pr3.ps1  smoke_redis_rate_limit.ps1  smoke_redis_rate_limit.sh
deploy/sql/: init.sql
docs/: architecture.md  benchmarks.md  observability.md  operability.md  ops.md  sdk-generation.md  security-narrative.md  threat-model.md
docs/adr/: 001-deny-by-default.md  002-hash-chain-audit.md  003-fail-closed.md
policies/: casf.rego  casf_test.rego
scripts/: export_openapi.py
services/opa/policy/: casf.rego  casf_test.rego
services/verifier/: .dockerignore  Dockerfile  pyproject.toml
services/verifier/src/: __init__.py
services/verifier/src/casf_verifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/verifier/src/verifier/: __init__.py  audit.py  export_audit_digest.py  logging.py  main.py  metrics.py  models.py  opa_client.py  rate_limiter.py  rules.py  settings.py
services/verifier/tests/: __init__.py  conftest.py  helpers.py  test_anti_replay.py  test_audit_chain.py  test_audit_fail_closed.py  test_healthz.py  test_metrics.py  test_rules_sms_rate_limit.py  test_smoke_verify.py
